* Updated documentation to clarify `DMM Dynamic Copyright` parameters
* Updated 'readme.txt' information - NB: All open and new TODO items will be found in their appropriate file going forward from this version

= CSS =
* Added 'Order of Contents' reference to the stylesheet with minor re-organization
* Added id `wp-link-pages` wrapper to `wp_link_pages` output
* Changed bottom of post to have smaller separating margin and added a bottom border to better delineate posts
* Changed base font-size to 100% and adjusted typography as needed/required
* Removed the right and bottom borders from the gallery images; and added additional elements to handle galleries up to 10 columns wide
* Removed (using comments) `background property` from `code` element
* Removed margins from a blockquote if it is within another blockquote
* Reorganized stylesheet and added 'Order of Contents' section for reference
* Updated forms and search widget styles

= Internet Browsers Reviewed =
* Apple Safari v5.1.2 (Mac)
* Apple Safari v5.1.2 (PC)
* Firefox v8.0.1 (Mac)
* Firefox v8.0.1 (PC)
* Google Chrome v15.0
* Internet Explorer v9.0
* Opera v11.60

/** ------------------------------------------------------------------------- */

== Version 1.9.1 ==
* added CSS optimizations
* added PHPDoc style documentation
* combined added comment classes `user-ID` and `microid` creation into one function `Add Comment Classes` in 'comments.php'
* corrected comment reply style
* drop direct support for Internet Explorer 6 or order
* modified `.widget h2` CSS to better allow for long titles in the sidebar
* moved "You must be logged in to post a comment." to be more clearly readable
* moved enqueued `comment-reply` call from 'header.php' to 'functions.php'
* removed `get_page_number` function as no longer needed
* removed 'category.php' template file as not used
* reviewed and corrected old changelog entries for spelling and other minor typos
* updated 'readme.txt' (minor changes)

----
-- Version 1.9